--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <li><a href="#slide1">Who Am I?</a></li>
             <li><a href="#slide2">My Ability</a></li>
             <li><a href="#section2">Made by Me</a></li>
-            <li><a href="#contact">Contact Me</a></li>
+            <li><a href="#section3">Contact Me</a></li>
         </ul>
       </nav>
     </div>
@@ -53,7 +53,7 @@
   <div class="outlayer"></div>
   <div id="fullpage">
   	<div class="section " id="section0">
-  		<div class="intro">
+  		<div class="intro row">
   			<input type="hidden" id="typing-txt" value="소통하는 Developer...">  
         <h1 id="typing"></h1>
   		</div>
@@ -135,38 +135,38 @@
   
   	</div>
   	<div class="section" id="section2">
-  		<div class="intro">
+  		<div class="intro row">
         <h3>Portfolio</h3>
         <div class="pofol-list">
           <ul class="cf">
             <li>
               <div class="product pd1">
-
+                반응형
               </div>
             </li>
             <li>
               <div class="product pd2">
-
+                모바일  
               </div>
             </li>
             <li>
               <div class="product pd3">
-
+                웹리뉴얼
               </div>
             </li>
             <li>
               <div class="product pd4">
-
+                리액트
               </div>
             </li>
             <li>
               <div class="product pd5">
-
+                앞으로
               </div>
             </li>
             <li>
               <div class="product pd6">
-
+                만들어
               </div>
             </li>
           </ul>
@@ -174,9 +174,23 @@
   		</div>
     </div>
     <div class="section" id="section3">
-  		<div class="intro">
-        <h1>Enjoy it</h1>
-        
+  		<div class="intro row">
+        <p class="title1">Contact</p>
+        <p class="title2">Me</p>
+        <div class="wrap-form">
+          <form action="#" method="post" class="contact-form">
+            <fieldset>
+              <legend>문의메일보내기</legend>
+              <ul>
+                <li><input type="text" id="user-name" placeholder="Name"></li>
+                <li><input type="text" id="user-email" placeholder="E-mail address"></li>
+                <li><input type="text" id="title" placeholder="Title"></li>
+                <li><input type="text" id="message-box" placeholder="Message"></li>
+              </ul>
+              <a href="jein8954@naver.com" target="_top">SEND E-mail</a>
+            </fieldset>
+          </form>
+        </div>
   		</div>
   	</div>
   </div>
